--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,11 +1,8 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "@saberhq/tsconfig/tsconfig.cjs.json",
   "include": ["src/"],
   "exclude": ["**/*.test.ts"],
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "outDir": "dist/cjs/",
-    "noEmit": false
+    "outDir": "dist/esm/"
   }
 }
