--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "jsbi": "^3 || ^4"
   },
   "devDependencies": {
+    "@jest/types": "^28.1.0",
     "@rushstack/eslint-patch": "^1.1.3",
+    "@saberhq/eslint-config": "^1.13.25",
     "@saberhq/tsconfig": "^1.13.25",
     "@types/bn.js": "^5.1.0",
+    "@types/eslint": "^8.4.2",
     "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
