--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,25 +9,25 @@ on:
       - main
 
 jobs:
-  run-linters:
-    name: Run linters
+  lint:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up node
-        uses: actions/setup-node@v3
+      # Set up Node
+      - uses: actions/setup-node@v3
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+      - name: Yarn Cache
+        uses: actions/cache@v3
         with:
-          node-version: 14
-      - uses: actions/cache@v3
-        with:
-          path: .yarn/
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+            ${{ runner.os }}-modules-
+
+      - run: yarn install
       - run: yarn typecheck
       - run: yarn lint
+      - run: yarn doctor
