--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "@yarnpkg/doctor": "^3.1.3",
     "bn.js": "^5.2.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
