--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
     "jest": "^28.1.0",
+    "jest-runtime": "^28.1.0",
     "jsbi": "^4.3.0",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
