--- a/package.json
+++ b/package.json
@@ -37,33 +37,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/big.js": "^6.1.6",
+    "@types/big.js": "^6.2.2",
     "big.js": "^6.2.1",
     "decimal.js-light": "^2.5.1",
-    "tiny-invariant": "^1.2.0",
-    "tslib": "^2.4.0"
+    "tiny-invariant": "^1.3.3",
+    "tslib": "^2.6.2"
   },
   "peerDependencies": {
     "jsbi": "^3 || ^4"
   },
   "devDependencies": {
-    "@jest/types": "^29.0.3",
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@saberhq/eslint-config": "^2.0.5",
-    "@saberhq/tsconfig": "^2.0.5",
-    "@types/eslint": "^8.4.6",
-    "@types/jest": "^29.0.1",
-    "@yarnpkg/doctor": "^3.1.4",
-    "eslint": "^8.23.1",
-    "eslint-import-resolver-node": "^0.3.6",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
-    "jest-runtime": "^29.0.3",
+    "@jest/types": "^29.6.3",
+    "@rushstack/eslint-patch": "^1.10.1",
+    "@saberhq/eslint-config": "^3.2.1",
+    "@saberhq/tsconfig": "^3.2.1",
+    "@types/eslint": "^8.56.6",
+    "@types/jest": "^29.5.12",
+    "@yarnpkg/doctor": "^4.0.1",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-runtime": "^29.7.0",
     "jsbi": "^4.3.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "ts-jest": "^29.0.0",
-    "typescript": "^4.8.3"
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
+    "typescript": "~5.3"
   },
   "engines": {
     "node": ">=10"
@@ -72,5 +72,5 @@
     "*.{ts,tsx,cjs,mjs}": "eslint --fix",
     "*.{css,html,js,json,jsx,md,sass,scss,vue,yaml,yml}": "prettier --write"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@4.1.1"
 }
