--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "5.2.1",
   "description": "⚒️ A library for token math.",
   "website": "https://ubeswap.org",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
@@ -32,19 +33,15 @@
     "clean": "rm -r dist/",
     "typecheck": "tsc",
     "lint": "eslint .",
-    "test": "jest",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' yarn jest",
     "prepublishOnly": "npm run clean && npm run build",
     "prepare": "husky install"
   },
   "dependencies": {
     "@types/big.js": "^6.2.2",
     "big.js": "^6.2.1",
-    "decimal.js-light": "^2.5.1",
     "tiny-invariant": "^1.3.3",
     "tslib": "^2.6.2"
-  },
-  "peerDependencies": {
-    "jsbi": "^3 || ^4"
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
@@ -59,11 +56,10 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-runtime": "^29.7.0",
-    "jsbi": "^4.3.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "typescript": "~5.3"
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=10"
